--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div>
-  <button mat-button color="primary">Primary</button>
-</div>
+<main class="rex-content">
+  <router-outlet></router-outlet>
+</main>
