--- a/projects/rex-tools/src/app/pages/editors/blog/blog-form.component.scss
+++ b/projects/rex-tools/src/app/pages/editors/blog/blog-form.component.scss
@@ -7,7 +7,7 @@
         }
         .rex-blog-form-actions {
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
             padding: 16px 0px;
             button {
                 margin: 0px 8px;
